--- a/android/src/main/res/drawable/flash_on.xml
+++ b/android/src/main/res/drawable/flash_on.xml
@@ -6,9 +6,9 @@
   <path
       android:pathData="M0,0h24v24h-24z"
       android:strokeAlpha="0"
-      android:fillColor="#000000"
+      android:fillColor="#fff"
       android:fillAlpha="0"/>
   <path
       android:pathData="M11.11,23a1,1 0,0 1,-0.34 -0.06,1 1,0 0,1 -0.65,-1.05l0.77,-7.09H5a1,1 0,0 1,-0.83 -1.56l7.89,-11.8a1,1 0,0 1,1.17 -0.38,1 1,0 0,1 0.65,1l-0.77,7.14H19a1,1 0,0 1,0.83 1.56l-7.89,11.8a1,1 0,0 1,-0.83 0.44z"
-      android:fillColor="#000000"/>
+      android:fillColor="#fff"/>
 </vector>
