--- a/android/src/main/res/layout/barcode_capture.xml
+++ b/android/src/main/res/layout/barcode_capture.xml
@@ -9,7 +9,6 @@
 
     <com.amolg.flutterbarcodescanner.camera.CameraSourcePreview
         android:id="@+id/preview"
-        android:layout_above="@+id/layoutBottom"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -21,47 +20,38 @@
 
     </com.amolg.flutterbarcodescanner.camera.CameraSourcePreview>
 
-    <RelativeLayout
-        android:id="@+id/layoutBottom"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_alignParentBottom="true"
-        android:background="@android:color/black">
-
         <ImageView
             android:id="@+id/imgViewSwitchCamera"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentBottom="true"
             android:layout_centerVertical="true"
-            android:layout_marginStart="10dp"
             android:layout_marginLeft="10dp"
+            android:layout_marginBottom="10dp"
             android:contentDescription="Switch camera"
-            android:src="@drawable/ic_switch_camera"
+            android:src="@drawable/camera_switch"
             android:layout_alignParentStart="true" />
 
         <ImageView
             android:id="@+id/imgViewBarcodeCaptureUseFlash"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_centerInParent="true"
-            android:contentDescription="Flash button"
-            android:src="@drawable/ic_barcode_flash_off" />
-
-        <Button
-            android:id="@+id/btnBarcodeCaptureCancel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_alignParentBottom="true"
-            android:layout_centerVertical="true"
-            android:layout_marginEnd="10dp"
+            android:layout_centerInParent="true"
+            android:layout_marginBottom="10dp"
+            android:contentDescription="Flash button"
+            android:src="@drawable/flash_off" />
+
+        <ImageView
+            android:id="@+id/btnBarcodeCaptureCancel"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginBottom="10dp"
             android:layout_marginRight="10dp"
-            android:background="@android:color/transparent"
-            android:text="Cancel"
-            android:textAllCaps="false"
-            android:textColor="@android:color/white" />
-    </RelativeLayout>
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:contentDescription="Flash button"
+            android:src="@drawable/cancel_button" />
+
 </RelativeLayout>
