--- a/android/src/main/res/layout/barcode_capture.xml
+++ b/android/src/main/res/layout/barcode_capture.xml
@@ -20,38 +20,53 @@
 
     </com.amolg.flutterbarcodescanner.camera.CameraSourcePreview>
 
-        <ImageView
-            android:id="@+id/imgViewSwitchCamera"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentBottom="true"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
-            android:layout_marginBottom="10dp"
-            android:contentDescription="Switch camera"
-            android:src="@drawable/camera_switch"
-            android:layout_alignParentStart="true" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/barcode_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <TextView
+            android:id="@+id/textOverlay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Đặt mã vạch vào khung để quét"
+            android:textColor="@android:color/white"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="120dp"/>
+        <!-- Switch camera - bottom-left -->
+      <ImageView
+        android:id="@+id/imgViewSwitchCamera"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:contentDescription="Switch camera"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginStart="20dp"
+        android:layout_marginBottom="70dp"/>
 
-        <ImageView
-            android:id="@+id/imgViewBarcodeCaptureUseFlash"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_alignParentBottom="true"
-            android:layout_centerInParent="true"
-            android:layout_marginBottom="10dp"
-            android:contentDescription="Flash button"
-            android:src="@drawable/flash_off" />
+    <ImageView
+        android:id="@+id/imgViewBarcodeCaptureUseFlash"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:contentDescription="Flash button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="60dp"/>
 
-        <ImageView
-            android:id="@+id/btnBarcodeCaptureCancel"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:contentDescription="Flash button"
-            android:src="@drawable/cancel_button" />
+    <ImageView
+        android:id="@+id/btnBarcodeCaptureCancel"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:contentDescription="Cancel button"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="20dp"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </RelativeLayout>
